--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ dataTable = "datastore"
 tokenStore = "tokenstores"
 messageStore = "message"
 roomStore = "rooms"
-mongoConnUrl = "mongodb+srv://bigmouse:6Xv67NN3hlAsoD2S@mongocluster.295l72p.mongodb.net/?retryWrites=true&w=majority"
+mongoConnUrl = "mongodb+srv://bigmouse:@mongocluster.295l72p.mongodb.net/?retryWrites=true&w=majority"
 mongoLocalUrl = "mongodb://localhost:27017/MyStore"
 
 groupId = 655c39ab450e970fbd883b8d
